Fixed autoscroll on iOS

--- a/Nativescript/app/views/player/player.css
+++ b/Nativescript/app/views/player/player.css
@@ -6,5 +6,5 @@
   font-size: 14;
 }
 #rate-btn {
-  background-color: 'red';
+  background-color: '#FF0000';
 }
